fix: hide overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,3 @@
 .App {
-  max-width: 1400px;
-  margin: auto;
+  overflow-x: hidden;
 }
